--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
 
     const options = {
       clientId: "web_" + Math.random().toString(16).slice(2),
-      username: "YOUR_MQTT_USER", // or ""
-      password: "YOUR_MQTT_PASS", // or ""
+      username: "", // or ""
+      password: "", // or ""
       clean: true,
       reconnectPeriod: 1000
     };
@@ -48,3 +48,4 @@
   </script>
 </body>
 </html>
+
