--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <script>
     // Put your broker WebSocket URL here (from your MQTT provider):
     // Example format: wss://YOUR_BROKER_HOST:8084/mqtt
-    const WS_URL = "wss://YOUR_BROKER_HOST:YOUR_WS_PORT/mqtt";
+    const WS_URL = "wss://https://1337hypex.github.io/esp32/:8084/mqtt";
 
     const options = {
       clientId: "web_" + Math.random().toString(16).slice(2),
@@ -48,4 +48,5 @@
   </script>
 </body>
 </html>
+
 
