--- a/index.html
+++ b/index.html
@@ -1,31 +1,54 @@
 <!doctype html>
-<html>
+<html lang="en">
 <head>
-  <meta name="viewport" content="width=device-width,initial-scale=1">
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>ESP32 RGB + LCD</title>
-  <style>
-    body{font-family:Arial;margin:20px}
-    button{padding:16px 18px;margin:8px;font-size:18px}
-    input{padding:14px;font-size:16px;width:360px;max-width:95%}
-    #status{margin-top:12px;font-size:16px}
-  </style>
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <h2>ESP32 Control</h2>
+  <div class="wrap">
+    <header class="top">
+      <div>
+        <h1>ESP32 Control Panel</h1>
+        <p class="sub">RGB + I2C 1602 LCD via MQTT</p>
+      </div>
+      <div class="badge" id="badge">Loading…</div>
+    </header>
 
-  <div>
-    <button onclick="sendRGB('red')">Red</button>
-    <button onclick="sendRGB('green')">Green</button>
-    <button onclick="sendRGB('blue')">Blue</button>
-    <button onclick="sendRGB('white')">White</button>
-    <button onclick="sendRGB('off')">Off</button>
+    <main class="grid">
+      <section class="card">
+        <h2>RGB</h2>
+        <p class="hint">Click a color to send a command to the ESP32.</p>
+
+        <div class="btns">
+          <button class="btn b-red"   onclick="sendRGB('red')">Red</button>
+          <button class="btn b-green" onclick="sendRGB('green')">Green</button>
+          <button class="btn b-blue"  onclick="sendRGB('blue')">Blue</button>
+          <button class="btn b-white" onclick="sendRGB('white')">White</button>
+          <button class="btn b-off"   onclick="sendRGB('off')">Off</button>
+        </div>
+      </section>
+
+      <section class="card">
+        <h2>LCD Message</h2>
+        <p class="hint">Sends up to ~32 characters (16 per line on 1602).</p>
+
+        <div class="row">
+          <input id="txt" maxlength="64" placeholder="Type a message for the LCD…" />
+          <button class="btn b-send" onclick="sendLCD()">Send</button>
+        </div>
+
+        <div class="status" id="status">Status: loading…</div>
+      </section>
+    </main>
+
+    <footer class="foot">
+      Broker: <span class="mono">broker.emqx.io</span> • Topics:
+      <span class="mono">hypex/rgb/9f3a2c/set</span> and
+      <span class="mono">hypex/lcd/9f3a2c/msg</span>
+    </footer>
   </div>
-
-  <h3>LCD message</h3>
-  <input id="txt" placeholder="Type message (max ~32 chars)" />
-  <button onclick="sendLCD()">Send</button>
-
-  <div id="status">Status: loading...</div>
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/mqtt/5.14.1/mqtt.min.js"></script>
   <script>
@@ -35,18 +58,40 @@
     const TOPIC_LCD = "hypex/lcd/9f3a2c/msg";
 
     const statusEl = document.getElementById("status");
+    const badgeEl  = document.getElementById("badge");
+
     const client = mqtt.connect(WS_URL, {
       clientId: "web_" + Math.random().toString(16).slice(2),
       clean: true,
       reconnectPeriod: 1000
     });
 
-    client.on("connect", () => statusEl.textContent = "Status: connected");
-    client.on("reconnect", () => statusEl.textContent = "Status: reconnecting...");
-    client.on("error", (e) => statusEl.textContent = "Status: error (" + e.message + ")");
+    function setBadge(state) {
+      badgeEl.textContent = state;
+      badgeEl.dataset.state = state;
+    }
+
+    client.on("connect", () => {
+      statusEl.textContent = "Status: connected";
+      setBadge("Connected");
+    });
+
+    client.on("reconnect", () => {
+      statusEl.textContent = "Status: reconnecting…";
+      setBadge("Reconnecting");
+    });
+
+    client.on("error", (e) => {
+      statusEl.textContent = "Status: error (" + e.message + ")";
+      setBadge("Error");
+    });
 
     function ensureConnected() {
-      if (!client.connected) { statusEl.textContent = "Status: not connected"; return false; }
+      if (!client.connected) {
+        statusEl.textContent = "Status: not connected";
+        setBadge("Not connected");
+        return false;
+      }
       return true;
     }
 
@@ -60,10 +105,9 @@
       if (!ensureConnected()) return;
       const text = document.getElementById("txt").value || "";
       client.publish(TOPIC_LCD, text);
-      statusEl.textContent = "Status: sent LCD";
+      statusEl.textContent = "Status: sent LCD message";
     };
   </script>
 </body>
 </html>
-
 
